<resources>
    <string name="title_mailInbox">Mail Inbox</string>
    <string name="title_managePublicKeys">Manage Public Keys</string>
    <string name="title_manageSecretKeys">Manage Secret Keys</string>
    <string name="title_selectRecipients">Select Recipients</string>
    <string name="title_selectSignature">Select Signature</string>
    <string name="title_encrypt">Encrypt</string>
    <string name="title_decrypt">Decrypt</string>
    <string name="title_authentication">Pass Phrase</string>
    <string name="title_createKey">Create Key</string>
    <string name="title_editKey">Edit Key</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_keyServerPreference">Key Server Preference</string>
    <string name="title_changePassPhrase">Change Pass Phrase</string>
    <string name="title_setPassPhrase">Set Pass Phrase</string>
    <string name="title_sendEmail">"Send Mail..."</string>
    <string name="title_encryptToFile">Encrypt To File</string>
    <string name="title_decryptToFile">Decrypt To File</string>
    <string name="title_addAccount">Add Account</string>
    <string name="title_importKeys">Import Keys</string>
    <string name="title_exportKey">Export Key</string>
    <string name="title_exportKeys">Export Keys</string>
    <string name="title_keyNotFound">Key Not Found</string>
    <string name="title_help">Getting Started</string>
    <string name="title_keyServerQuery">Query Key Server</string>
    <string name="title_sendKey">Export to Key Server</string>
    <string name="title_unknownSignatureKey">Unknown Signature Key</string>
    <string name="title_importFromQRCode">Import from QR Code</string>
    <string name="title_signKey">Sign Key</string>
    <string name="title_about">About</string>
    <string name="section_userIds">User IDs</string>
    <string name="section_keys">Keys</string>
    <string name="section_general">General</string>
    <string name="section_defaults">Defaults</string>
    <string name="section_advanced">Advanced</string>
    <string name="btn_signToClipboard">Sign To Clipboard</string>
    <string name="btn_encryptToClipboard">Encrypt To Clipboard</string>
    <string name="btn_encryptAndEmail">Encrypt And Email</string>
    <string name="btn_signAndEmail">Sign And Email</string>
    <string name="btn_encrypt">Encrypt</string>
    <string name="btn_sign">Sign</string>
    <string name="btn_decrypt">Decrypt</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_selectEncryptKeys">Select Recipients</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_encryptMessage">Encrypt Message</string>
    <string name="btn_decryptMessage">Decrypt Message</string>
    <string name="btn_encryptFile">Encrypt File</string>
    <string name="btn_decryptFile">Decrypt File</string>
    <string name="btn_save">Save</string>
    <string name="btn_doNotSave">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_noDate">None</string>
    <string name="btn_clearFilter">Clear Filter</string>
    <string name="btn_changePassPhrase">Change Pass Phrase</string>
    <string name="btn_setPassPhrase">Set Pass Phrase</string>
    <string name="btn_search">Search</string>
    <string name="btn_export_to_server">Export To Server</string>
    <string name="menu_about">About</string>
    <string name="menu_addAccount">Add GMail Account</string>
    <string name="menu_deleteAccount">Delete Account</string>
    <string name="menu_managePublicKeys">Manage Public Keys</string>
    <string name="menu_manageSecretKeys">Manage Secret Keys</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_importKeys">Import Keys</string>
    <string name="menu_exportKeys">Export Keys</string>
    <string name="menu_exportKey">Export Key</string>
    <string name="menu_deleteKey">Delete Key</string>
    <string name="menu_createKey">Create Key</string>
    <string name="menu_editKey">Edit Key</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_keyServer">Key Server</string>
    <string name="menu_updateKey">Update</string>
    <string name="menu_exportKeyToServer">Export To Server</string>
    <string name="menu_share">Share</string>
    <string name="menu_scanQRCode">Scan QR Code</string>
    <string name="menu_signKey">Sign Key</string>
    <string name="label_sign">Sign</string>
    <string name="label_message">Message</string>
    <string name="label_file">File</string>
    <string name="label_passPhrase">Pass Phrase</string>
    <string name="label_passPhraseAgain">Again</string>
    <string name="label_algorithm">Algorithm</string>
    <string name="label_asciiArmour">ASCII Armour</string>
    <string name="label_selectPublicKeys">Public Key(s)</string>
    <string name="label_deleteAfterEncryption">Delete After Encryption</string>
    <string name="label_deleteAfterDecryption">Delete After Decryption</string>
    <string name="label_deleteAfterImport">Delete After Import</string>
    <string name="label_encryptionAlgorithm">Encryption Algorithm</string>
    <string name="label_hashAlgorithm">Hash Algorithm</string>
    <string name="label_asymmetric">Public Key</string>
    <string name="label_symmetric">Pass Phrase</string>
    <string name="label_passPhraseCacheTtl">Pass Phrase Cache</string>
    <string name="label_messageCompression">Message Compression</string>
    <string name="label_fileCompression">File Compression</string>
    <string name="label_language">Language</string>
    <string name="label_forceV3Signature">Force V3 Signatures</string>
    <string name="label_keyServers">Key Servers</string>
    <string name="label_keyId">Key ID</string>
    <string name="label_creation">Creation</string>
    <string name="label_expiry">Expiry</string>
    <string name="label_usage">Usage</string>
    <string name="label_keySize">Key Size</string>
    <string name="label_mainUserId">Main User ID</string>
    <string name="label_name">Name</string>
    <string name="label_comment">Comment</string>
    <string name="label_email">Email</string>
    <string name="label_sendKey">Send Key to Server?</string>
    <string name="noKeysSelected">Select</string>
    <string name="oneKeySelected">1 Selected</string>
    <string name="nKeysSelected">Selected</string>
    <string name="unknownUserId">&lt;unknown></string>
    <string name="none">&lt;none></string>
    <string name="noKey">&lt;no key></string>
    <string name="noDate">-</string>
    <string name="noExpiry">&lt;no expiry></string>
    <string name="unknownStatus"></string>
    <string name="canEncrypt">can encrypt</string>
    <string name="canSign">can sign</string>
    <string name="expired">expired</string>
    <string name="notValid">not valid</string>
    <string name="nKeyServers">%s key server(s)</string>
    <string name="fingerprint">fingerprint</string>
    <string name="choice_none">None</string>
    <string name="choice_signOnly">Sign only</string>
    <string name="choice_encryptOnly">Encrypt only</string>
    <string name="choice_signAndEncrypt">Sign and Encrypt</string>
    <string name="choice_15secs">15 secs</string>
    <string name="choice_1min">1 min</string>
    <string name="choice_3mins">3 mins</string>
    <string name="choice_5mins">5 mins</string>
    <string name="choice_10mins">10 mins</string>
    <string name="choice_20mins">20 mins</string>
    <string name="choice_40mins">40 mins</string>
    <string name="choice_1hour">1 hour</string>
    <string name="choice_2hours">2 hours</string>
    <string name="choice_4hours">4 hours</string>
    <string name="choice_8hours">8 hours</string>
    <string name="choice_untilQuit">until quit</string>
    <string name="choice_language_system">System default</string>
    <string name="dsa">DSA</string>
    <string name="elgamal">ElGamal</string>
    <string name="rsa">RSA</string>
    <string name="filemanager_titleOpen">Open...</string>
    <string name="filemanager_titleSave">Save As...</string>
    <string name="filemanager_titleEncrypt">Select File To Encrypt...</string>
    <string name="filemanager_titleDecrypt">Select File To Decrypt...</string>
    <string name="filemanager_btnOpen">Open</string>
    <string name="filemanager_btnSave">Save</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="warningMessage">Warning: %s</string>
    <string name="errorMessage">Error: %s</string>
    <string name="wrongPassPhrase">Wrong pass phrase.</string>
    <string name="usingClipboardContent">Using clipboard content.</string>
    <string name="keySaved">Key saved.</string>
    <string name="setAPassPhrase">Set a pass phrase first.</string>
    <string name="noFilemanagerInstalled">No compatible file manager installed.</string>
    <string name="passPhrasesDoNotMatch">The pass phrases didn\'t match.</string>
    <string name="passPhraseMustNotBeEmpty">Empty pass phrases are not allowed.</string>
    <string name="passPhraseForSymmetricEncryption">Symmetric encryption.</string>
    <string name="passPhraseFor">%s</string>
    <string name="fileDeleteConfirmation">Are you sure you want to delete\n%s?</string>
    <string name="fileDeleteSuccessful">Successfully deleted.</string>
    <string name="noFileSelected">Select a file first.</string>
    <string name="decryptionSuccessful">Successfully decrypted.</string>
    <string name="encryptionSuccessful">Successfully encrypted.</string>
    <string name="encryptionToClipboardSuccessful">Successfully encrypted to clipboard.</string>
    <string name="enterPassPhraseTwice">Enter the pass phrase twice.</string>
    <string name="selectEncryptionKey">Select at least one encryption key.</string>
    <string name="selectEncryptionOrSignatureKey">Select at least one encryption key or a signature key.</string>
    <string name="specifyFileToEncryptTo">Please specify which file to encrypt to.\nWARNING! File will be overwritten if it exists.</string>
    <string name="specifyFileToDecryptTo">Please specify which file to decrypt to.\nWARNING! File will be overwritten if it exists.</string>
    <string name="specifyGoogleMailAccount">Specify the Google Mail account you want to add.</string>
    <string name="specifyFileToImportFrom">Please specify which file to import keys from. (.asc or .gpg)</string>
    <string name="specifyFileToExportTo">Please specify which file to export to.\nWARNING! File will be overwritten if it exists.</string>
    <string name="specifyFileToExportSecretKeysTo">Please specify which file to export to.\nWARNING! You are about to export SECRET keys.\nWARNING! File will be overwritten if it exists.</string>
    <string name="keyDeletionConfirmation">Do you really want to delete the key \'%s\'?\nYou can\'t undo this!</string>
    <string name="secretKeyDeletionConfirmation">Do you really want to delete the SECRET key \'%s\'?\nYou can\'t undo this!</string>
    <string name="keysAddedAndUpdated">Successfully added %1$s key(s) and updated %2$s key(s).</string>
    <string name="keysAdded">Successfully added %s key(s).</string>
    <string name="keysUpdated">Successfully updated %s key(s).</string>
    <string name="noKeysAddedOrUpdated">No keys added or updated.</string>
    <string name="keyExported">Successfully exported 1 key.</string>
    <string name="keysExported">Successfully exported %s keys.</string>
    <string name="noKeysExported">No keys exported.</string>
    <string name="keyCreationElGamalInfo">Note: only subkeys support ElGamal, and for ElGamal the nearest keysize of 1536, 2048, 3072, 4096, or 8192 will be used.</string>
    <string name="keyNotFound">Couldn\'t find key %08X.</string>
    <string name="keysFound">Found %s key(s).</string>
    <string name="unknownSignatureKeyTouchToLookUp">Unknown signature, touch to look up key.</string>
</resources>