<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Thialfihar <thi@thialfihar.org>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/section_general">

        <ListPreference
            android:key="language"
            android:title="@string/label_language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:dialogTitle="@string/label_language" />

        <org.thialfihar.android.apg.ui.widget.IntegerListPreference
            android:persistent="false"
            android:key="passPhraseCacheTtl"
            android:entries="@array/pass_phrase_cache_ttl_entries"
            android:entryValues="@array/pass_phrase_cache_ttl_values"
            android:title="@string/label_passPhraseCacheTtl" />

        <PreferenceScreen
            android:persistent="false"
            android:key="keyServers"
            android:title="@string/label_keyServers" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/section_defaults">

        <org.thialfihar.android.apg.ui.widget.IntegerListPreference
            android:persistent="false"
            android:key="defaultEncryptionAlgorithm"
            android:title="@string/label_encryptionAlgorithm" />

        <org.thialfihar.android.apg.ui.widget.IntegerListPreference
            android:persistent="false"
            android:key="defaultHashAlgorithm"
            android:title="@string/label_hashAlgorithm" />

        <org.thialfihar.android.apg.ui.widget.IntegerListPreference
            android:persistent="false"
            android:key="defaultMessageCompression"
            android:title="@string/label_messageCompression" />

        <org.thialfihar.android.apg.ui.widget.IntegerListPreference
            android:persistent="false"
            android:key="defaultFileCompression"
            android:title="@string/label_fileCompression" />

        <CheckBoxPreference
            android:persistent="false"
            android:key="defaultAsciiArmour"
            android:title="@string/label_asciiArmour" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/section_advanced">

        <CheckBoxPreference
            android:persistent="false"
            android:key="forceV3Signatures"
            android:title="@string/label_forceV3Signature" />

    </PreferenceCategory>

</PreferenceScreen>
