<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Thialfihar <thi@thialfihar.org>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="5dip"
    android:fillViewport="true">

    <ScrollView
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true">

        <ListView
            android:id="@+id/accounts"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/ButtonBar">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_encryptFile"
                android:text="@string/btn_encryptFile"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="fill_parent"/>

            <Button
                android:id="@+id/btn_decryptFile"
                android:text="@string/btn_decryptFile"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="fill_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_encryptMessage"
                android:text="@string/btn_encryptMessage"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="fill_parent"/>

            <Button
                android:id="@+id/btn_decryptMessage"
                android:text="@string/btn_decryptMessage"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="fill_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
